--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,12 +17,12 @@
     "rules": {
       "react/jsx-filename-extension": ["warn", { "extensions": [".js", ".jsx"] }],
       "react/react-in-jsx-scope": "off",
+      "react/prop-types": "off",
       "import/no-unresolved": "off",
       "no-shadow": "off"
     },
     "ignorePatterns": [
       "dist/",
-      "build/",
-      "src/"
+      "build/"
     ]
   }
